--- a/P000380.opf/meta.yml
+++ b/P000380.opf/meta.yml
@@ -3,5 +3,17 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG4230
   title: བདེ་མཆོག་ནམ་མཁའ་དང་མཉམ་པའི་རྒྱུད་ཀྱི་རྩ་འགྲེལ
-  volume: ''
+  volume:
+    a8e5e3af4a2d46fe9fb31aebeb849cf3:
+      image_group_id: I1PD97692
+      title: Volume 1 of bde mchog nam mkha' dang mnyam pa'i rgyud kyi rtsa 'grel
+      volume_number: 1
+      total_pages: 68
   author: ''
+ebook_metadata:
+  title: བདེ་མཆོག་ནམ་མཁའ་དང་མཉམ་པའི་རྒྱུད་ཀྱི་རྩ་འགྲེལ
+  author: ''
+  sku: P000380
+  cover: cover.jpg
+  layers:
+  - pagination
