--- a/P000380.opf/meta.yml
+++ b/P000380.opf/meta.yml
@@ -1,15 +1,16 @@
-id: opecha:P000380
+id: P000380
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG4230
   title: བདེ་མཆོག་ནམ་མཁའ་དང་མཉམ་པའི་རྒྱུད་ཀྱི་རྩ་འགྲེལ
-  volume:
+  author: ''
+  volumes:
     a8e5e3af4a2d46fe9fb31aebeb849cf3:
       image_group_id: I1PD97692
       title: Volume 1 of bde mchog nam mkha' dang mnyam pa'i rgyud kyi rtsa 'grel
       volume_number: 1
       total_pages: 68
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: བདེ་མཆོག་ནམ་མཁའ་དང་མཉམ་པའི་རྒྱུད་ཀྱི་རྩ་འགྲེལ
   author: ''
