--- a/P000380.opf/layers/v001/Pagination.yml
+++ b/P000380.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5e823ee39ca64f1b8509b5d48bd46fb4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   596051857c934b57b6c2ba7748beede2:
