--- a/P000380.opf/meta.yml
+++ b/P000380.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P000380
 initial_creation_type: ocr
 created_at: 17/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-16 15:36:59.121232
 source_metadata:
   id: bdr:W1KG4230
   title: བདེ་མཆོག་ནམ་མཁའ་དང་མཉམ་པའི་རྒྱུད་ཀྱི་རྩ་འགྲེལ
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 68
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
